--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -19,9 +19,14 @@
             <img class="delay" [src]="highGradeURL[randomNum]">
         </div>
         <p class="text-center font-bold">{{ highGradeName[randomNum] }}</p>
-        <button type="button" label="ดูสินค้า High-Grade เพิ่มเติม" class="p-button-text p-button-success"
-            routerLink="../category/high-grade" pButton pRipple>
-        </button>
+        <div class="flex justify-center">
+            <button 
+                type="button" label="ดูสินค้า High-Grade เพิ่มเติม" 
+                style="width: 50%;"
+                class="p-button-outline p-button-secondary mt-5"  
+                routerLink="../category/high-grade" pButton pRipple>
+            </button>
+        </div>
     </div>
 
     <div class="flex flex-col">
@@ -29,9 +34,14 @@
             <img class="delay" [src]="realGradeURL[randomNum]">
         </div>
         <p class="text-center font-bold">{{ realGradeName[randomNum] }}</p>
-        <button type="button" label="ดูสินค้า Real-Grade เพิ่มเติม" class="p-button-text p-button-success"
-            routerLink="../category/real-grade" pButton pRipple>
-        </button>
+        <div class="flex justify-center">
+            <button 
+                type="button" label="ดูสินค้า Real-Grade เพิ่มเติม" 
+                style="width: 50%;"
+                class="p-button-outline p-button-secondary mt-5"  
+                routerLink="../category/real-grade" pButton pRipple>
+            </button>
+        </div>
     </div>
 
     <div class="flex flex-col">
@@ -39,9 +49,14 @@
             <img class="delay" [src]="masterGradeURL[randomNum]">
         </div>
         <p class="text-center font-bold">{{ masterGradeName[randomNum] }}</p>
-        <button type="button" label="ดูสินค้า Master-Grade เพิ่มเติม" class="p-button-text p-button-success"
-            routerLink="../category/master-grade" pButton pRipple>
-        </button>
+        <div class="flex justify-center">
+            <button 
+                type="button" label="ดูสินค้า Master-Grade เพิ่มเติม" 
+                style="width: 50%;"
+                class="p-button-outline p-button-secondary mt-5"  
+                routerLink="../category/master-grade" pButton pRipple>
+            </button> 
+        </div>
     </div>
 
     <div class="flex flex-col">
@@ -49,18 +64,28 @@
             <img class="delay" [src]="perfectGradeURL[randomNum]">
         </div>
         <p class="text-center font-bold">{{ perfectGradeName[randomNum] }}</p>
-        <button type="button" label="ดูสินค้า Perfect-Grade เพิ่มเติม" class="p-button-text p-button-success"
-            routerLink="../category/perfect-grade" pButton pRipple>
-        </button>
+        <div class="flex justify-center">
+            <button 
+                type="button" label="ดูสินค้า Perfect-Grade เพิ่มเติม" 
+                style="width: 50%;"
+                class="p-button-outline p-button-secondary mt-5"            
+                routerLink="../category/perfect-grade" pButton pRipple>
+            </button>
+        </div>
     </div>
 
-    <div class="flex flex-col">
+    <div class="flex flex-col mb-5">
         <div class="overflow-hidden flex justify-center items-center" style="height: 400px;">
             <img class="delay object-scale-down h-72 w-96" [src]="toolURL[randomNum]" height="200px">
         </div>
         <p class="text-center font-bold">{{ toolName[randomNum] }}</p>
-        <button type="button" label="ดูสินค้า Tool เพิ่มเติม" class="p-button-text p-button-success"
+        <div class="flex justify-center">
+            <button 
+            type="button" label="ดูสินค้า Tool เพิ่มเติม"
+            style="width: 50%;"
+            class="p-button-outline p-button-secondary mt-5"
             routerLink="../category/high-grade" pButton pRipple>
         </button>
+        </div>
     </div>
 </div>
