--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body::-webkit-scrollbar {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 * {
     font-family: 'Mitr', sans-serif;
