--- a/src/app/view/signin/signin.component.html
+++ b/src/app/view/signin/signin.component.html
@@ -1,8 +1,8 @@
 <div class="flex items-center justify-center px-4" style="height: calc(100vh - 64px);">
     <div class="w-full max-w-xl">
         <div class="flex flex-col items-center justify-center">
-            <img class="" src="https://cdn.discordapp.com/attachments/1021435603688099913/1037374937096261692/13_20221102213655.png" width="250px">
-            <label class="mt-8 flex justify-center text-3xl font-bold text-gray-900">เข้าสู่ระบบด้วยบัญชีของคุณ</label>
+            <img class="" src="https://cdn.discordapp.com/attachments/1021435603688099913/1043862658341949450/13_20221120191533.png" width="350px">
+            <label class="-mt-8 flex justify-center text-3xl font-bold text-gray-900">เข้าสู่ระบบด้วยบัญชีของคุณ</label>
         </div>
 
         <form class="mt-8 space-y-6" [formGroup]="loginForm" (ngSubmit)="login()">
