--- a/src/app/view/cart/cart.component.html
+++ b/src/app/view/cart/cart.component.html
@@ -22,7 +22,8 @@
                 <div class="flex-2 flex-col w-5 self-center">
                     <div class="flex border-[1px] border-black w-32 h-10 justify-between">
                         <div>
-                            <button (click)="decreaseAmount(data)" class="w-10 h-[39px] text-black font-bold hover:text-gray-700">-</button>
+                            <button (click)="decreaseAmount(data)"
+                                class="w-10 h-[39px] text-black font-bold hover:text-gray-700">-</button>
                         </div>
                         <div class="self-center font-bold">
                             <p id="num">{{ data.amount }}</p>
@@ -53,7 +54,8 @@
     <p class="text-right font-extralight text-base mt-3 opacity-50">Shipping & taxes calculated at checkout</p>
 
     <div class="flex flex-row justify-end mt-4 mb-40">
-        <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700">CHECKOUT</button>
+        <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700"
+            (click)="submit()">CHECKOUT</button>
     </div>
 </div>
 
@@ -70,3 +72,34 @@
         </div>
     </div>
 </ng-template>
+
+
+<p-dialog [(visible)]="showDialog" [resizable]="false" [modal]="true" [draggable]="false" [style]="{width: '75vw'}">
+    <div class="flex content-center	 justify-items-center">
+        <p class="text-4xl font-bold">คำสั่งซื้อ</p>
+        <p class="text-2xl mt-1 ml-2">#{{ orderNo }}</p>
+    </div>
+
+
+    <ng-template pTemplate="footer">
+        <div class="grid grid-flow-row-dense grid-cols-12 gap-4">
+            <div class="col-span-8"></div>
+            <div class="col-span-2">
+                <button  
+                    class="p-button-md p-button-secondary p-button-text" 
+                    pButton label="ย้อนกลับ"
+                    (click)="showDialog = false"
+                    style="width: 100%;">
+                </button>
+            </div>
+            <div class="col-span-2">
+                <button
+                    class="p-button-md p-button-primary" 
+                    pButton label="ยืนยัน"
+                    (click)="confirm()"
+                    style="width: 100%;">
+                </button>
+            </div>
+        </div>
+    </ng-template>
+</p-dialog>
