--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -23,7 +23,7 @@
             <button 
                 type="button" label="ดูสินค้า High-Grade เพิ่มเติม" 
                 style="width: 50%;"
-                class="p-button-outline p-button-secondary mt-5"  
+                class="p-button-outline p-button-secondary mt-5 shadow"  
                 routerLink="../category/high-grade" pButton pRipple>
             </button>
         </div>
@@ -38,7 +38,7 @@
             <button 
                 type="button" label="ดูสินค้า Real-Grade เพิ่มเติม" 
                 style="width: 50%;"
-                class="p-button-outline p-button-secondary mt-5"  
+                class="p-button-outline p-button-secondary mt-5 shadow"  
                 routerLink="../category/real-grade" pButton pRipple>
             </button>
         </div>
@@ -53,13 +53,13 @@
             <button 
                 type="button" label="ดูสินค้า Master-Grade เพิ่มเติม" 
                 style="width: 50%;"
-                class="p-button-outline p-button-secondary mt-5"  
+                class="p-button-outline p-button-secondary mt-5 shadow"  
                 routerLink="../category/master-grade" pButton pRipple>
             </button> 
         </div>
     </div>
 
-    <div class="flex flex-col">
+    <div class="flex flex-col mt-5">
         <div class="overflow-hidden flex justify-center" style="height: 400px;">
             <img class="delay" [src]="perfectGradeURL[randomNum]">
         </div>
@@ -68,13 +68,13 @@
             <button 
                 type="button" label="ดูสินค้า Perfect-Grade เพิ่มเติม" 
                 style="width: 50%;"
-                class="p-button-outline p-button-secondary mt-5"            
+                class="p-button-outline p-button-secondary mt-5 shadow"            
                 routerLink="../category/perfect-grade" pButton pRipple>
             </button>
         </div>
     </div>
 
-    <div class="flex flex-col mb-5">
+    <div class="flex flex-col mt-5 mb-5">
         <div class="overflow-hidden flex justify-center items-center" style="height: 400px;">
             <img class="delay object-scale-down h-72 w-96" [src]="toolURL[randomNum]" height="200px">
         </div>
@@ -83,7 +83,7 @@
             <button 
             type="button" label="ดูสินค้า Tool เพิ่มเติม"
             style="width: 50%;"
-            class="p-button-outline p-button-secondary mt-5"
+            class="p-button-outline p-button-secondary mt-5 shadow"
             routerLink="../category/high-grade" pButton pRipple>
         </button>
         </div>
