--- a/src/app/view/category/tool/tool.component.html
+++ b/src/app/view/category/tool/tool.component.html
@@ -13,7 +13,7 @@
 <main>
     <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-            <div *ngFor="let tool of toolList" class="group relative" (click)="showDetail(tool.id)">
+            <div *ngFor="let tool of toolList" class="group relative shadow p-3" (click)="showDetail(tool.id)">
                 <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img [src]="tool.productURL" 
                         class="h-full w-full object-contain object-center lg:h-full lg:w-full">
