--- a/src/app/view/category/master-grade/master-grade.component.html
+++ b/src/app/view/category/master-grade/master-grade.component.html
@@ -44,22 +44,19 @@
             <p class="text-xl font-bold">Serires : {{ productDetail.series }}</p>
             <p class="text-xl font-bold">คุณสมบัติ</p>
             <div class="flex items-center mt-3">
-                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
-                <p class="text-xl"><b>Brand</b> : BANDAI</p>
+                <p class="text-xl ml-12"><b>Brand</b> : BANDAI</p>
             </div>
             <p class="text-xl ml-12"><b>Origin</b> : Japan</p>
             <p class="text-xl ml-12"><b>Product Type</b> : Gunpla Plastic</p>
 
             <div class="flex items-center mt-3">
-                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
-                <p class="text-xl"><b>Model Kit</b></p>
+                <p class="text-xl ml-12"><b>Model Kit</b></p>
             </div>
             <p class="text-xl ml-12"><b>Model Scale</b> : 1/144</p>
             <p class="text-xl ml-12"><b>Model Heigth</b> : 13 cm.</p>
 
             <div class="flex items-center mt-3">
-                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
-                <p class="text-xl"><b>Model Kit Contains</b></p>
+                <p class="text-xl ml-12"><b>Model Kit Contains</b></p>
             </div>
             <p class="text-xl ml-12">Gundam Model x 1</p>
             <p class="text-xl ml-12">Sticker</p>
