--- a/src/app/view/category/tool/tool.component.html
+++ b/src/app/view/category/tool/tool.component.html
@@ -15,8 +15,7 @@
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div *ngFor="let tool of toolList" class="group relative shadow p-3" (click)="showDetail(tool.id)">
                 <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img [src]="tool.productURL" 
-                        class="h-full w-full object-contain object-center lg:h-full lg:w-full">
+                    <img [src]="tool.productURL" class="h-full w-full object-contain object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex flex-col">
                     <p class="text-lg font-bold text-gray-900">{{ tool.price | currency:'THB':'symbol-narrow':'' }}</p>
@@ -43,27 +42,9 @@
             <p-divider></p-divider>
             <p class="text-xl font-bold">Serires : {{ productDetail.series }}</p>
             <p class="text-xl font-bold">คุณสมบัติ</p>
-            <div class="flex items-center mt-3">
-                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
-                <p class="text-xl"><b>Brand</b> : BANDAI</p>
-            </div>
+            <p class="text-xl ml-12"><b>Brand</b> : BANDAI</p>
             <p class="text-xl ml-12"><b>Origin</b> : Japan</p>
             <p class="text-xl ml-12"><b>Product Type</b> : Gunpla Plastic</p>
-
-            <div class="flex items-center mt-3">
-                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
-                <p class="text-xl"><b>Model Kit</b></p>
-            </div>
-            <p class="text-xl ml-12"><b>Model Scale</b> : 1/144</p>
-            <p class="text-xl ml-12"><b>Model Heigth</b> : 13 cm.</p>
-
-            <div class="flex items-center mt-3">
-                <i class="pi pi-circle-fill mx-5 mt-1" style="font-size: 0.5rem"></i>
-                <p class="text-xl"><b>Model Kit Contains</b></p>
-            </div>
-            <p class="text-xl ml-12">Gundam Model x 1</p>
-            <p class="text-xl ml-12">Sticker</p>
-
         </div>
     </div>
     <ng-template pTemplate="footer">
