--- a/src/app/view/account/account.component.html
+++ b/src/app/view/account/account.component.html
@@ -65,8 +65,8 @@
     </div>
 </ng-template>
 
-<footer>
+<!-- <footer>
     <div class="absolute bottom-0 w-full pt-10 md:pt-20 bg-black text-neutral-300 ">
         <p class="mx-20 mb-10">@GUNDA SHOP</p>
     </div>
-</footer>
+</footer> -->
