--- a/src/app/view/cart/cart.component.html
+++ b/src/app/view/cart/cart.component.html
@@ -54,7 +54,7 @@
     <p class="text-right font-extralight text-base mt-3 opacity-50">Shipping & taxes calculated at checkout</p>
 
     <div class="flex flex-row justify-end mt-4 mb-40">
-        <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700"
+        <button class="bg-black text-white font-bold px-4 py-2 rounded hover:bg-gray-700 mb-5"
             (click)="submit()">CHECKOUT</button>
     </div>
 </div>
@@ -62,11 +62,11 @@
 <ng-template #haveNoData>
     <div class="container font-inter md:mx-auto h-[500px] w-[700px] mt-[20em] font-sans">
         <div class="gap-y-80 columns-1 text-center mt-[12em]">
-            <h1 class="text-2xl mb-7">ตะกร้าของคุณยังว่างอยู่</h1>
+            <h1 class="text-3xl mb-7 ">ตะกร้าของคุณยังว่างอยู่</h1>
             <div class="text-2xl font-bold border-1 max-w-[10em] text-center ml-[9.5em]">
                 <button routerLink="/home"
                     class="p-2 w-[10em] rounded-none text-white bg-black drop-shadow-2xl hover:bg-slate-900">
-                    Click here
+                    ไปดูสินค้า
                 </button>
             </div>
         </div>
