--- a/src/app/view/account/account.component.html
+++ b/src/app/view/account/account.component.html
@@ -6,7 +6,7 @@
         </div>
 
         <div class="mt-12 flex gap-8">
-            <div class="flex-auto">
+            <div class="flex-auto mb-5">
                 <h1 class="font-bold text-2xl mb-1 ">คำสั่งซื้อของฉัน</h1>
                 <hr>
 
